--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercie 5</title>
+    <title>Hacker Console</title>
     <style>
         @import url('https://fonts.cdnfonts.com/css/hacked');
 
